clusters/dev/splunk/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: splunk-dev
  labels:
    env: dev
